Source_Code/VPC.tf
resource "aws_vpc" "my-VPC" {
  cidr_block = "10.10.0.0/16"

  tags = {
    Name = "my-VPC"
  }
}
